--- a/telemin/static/css/base.css
+++ b/telemin/static/css/base.css
@@ -177,7 +177,7 @@ main {
 
 .sidebar__link {
     display: block;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     transition-property: background-color, color, border-color;
     transition-duration: 0.25s, 0.2s, 0.2s;
@@ -214,4 +214,31 @@ main {
 .item__description {
     margin-top: 10px;
     color: rgba(255, 255, 255, 0.7);
+}
+
+.item__header {
+    margin-bottom: 15px;
+}
+
+.item__avatar {
+    width: 40px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.item__info {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.item__info h1 {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 3px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.item__info p {
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.4);
 }
