--- a/telemin/templates/account/profile.html
+++ b/telemin/templates/account/profile.html
@@ -1,6 +1,6 @@
 {% extends "../base.html" %}
 {% load static %}
-
+{% block title %}Профиль пользователя{% endblock %}
 {% block content %}
     <div class="sidebar">
         <div class="sidebar__profile">
@@ -12,14 +12,14 @@
         </div>
         <div class="sidebar__menu">
             <ul class="sidebar__list">
-                <li class="sidebar__item"><a href="" class="sidebar__link">Public profile</a></li>
-                <li class="sidebar__item"><a href="" class="sidebar__link">Account</a></li>
-                <li class="sidebar__item"><a href="" class="sidebar__link">Appearance</a></li>
-                <li class="sidebar__item"><a href="" class="sidebar__link">Accessibility</a></li>
-                <li class="sidebar__item"><a href="" class="sidebar__link">Notifications</a></li>
+                <li class="sidebar__item"><a href="" class="sidebar__link">Публичный профиль</a></li>
+                <li class="sidebar__item"><a href="" class="sidebar__link">Аккаунт</a></li>
+                <li class="sidebar__item"><a href="" class="sidebar__link">Внешний вид</a></li>
+                <li class="sidebar__item"><a href="" class="sidebar__link">Доступ</a></li>
+                <li class="sidebar__item"><a href="" class="sidebar__link">Уведомления</a></li>
             </ul>
             <ul class="sidebar__list">
-                <p class="sidebar__title">Access</p>
+                <p class="sidebar__title">Права доступа</p>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Billing and plans</a></li>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Emails</a></li>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Password and authentication</a></li>
@@ -28,7 +28,7 @@
                 <li class="sidebar__item"><a href="" class="sidebar__link">Moderation</a></li>
             </ul>
             <ul class="sidebar__list">
-                <p class="sidebar__title">Code, planning, and automation </p>
+                <p class="sidebar__title">Кодирование, планирование<br> и автоматизация</p>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Public profile</a></li>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Account</a></li>
                 <li class="sidebar__item"><a href="" class="sidebar__link">Appearance</a></li>
@@ -41,9 +41,14 @@
         {% for post in posts %}
             <div class="content__item">
                 <div class="item__header">
-                    <h1 class="item__title">{{ post.title}}</h1>
-                    <p class="item__description">{{ post.description }}</p>
+                    <img src="{{ post.user.profile.photo.url }}" alt="" class="item__avatar" />
+                    <div class="item__info">
+                        <h1>{{ post.user.username }}</h1>
+                        <p>{{ post.created|date:"M d, Y" }}</p>
+                    </div>
                 </div>
+                <h1 class="item__title">{{ post.title}}</h1>
+                <p class="item__description">{{ post.description }}</p>
             </div>
         {% endfor %}
     </div>
