update, add vuejs app project

--- a/telemin/templates/base.html
+++ b/telemin/templates/base.html
@@ -22,7 +22,7 @@
                 </a>
                 <nav class="header__menu menu">
                     <ul class="menu__list">
-                        <li class="menu__item"><a href="" class="menu__link">Пост</a></li>
+                        <li class="menu__item"><a href="{% url "post" %}" class="menu__link">Пост</a></li>
                         <li class="menu__item">
                             <a href="" class="menu__link">Мой профиль</a>
                         </li>
