--- a/telemin/templates/account/profile.html
+++ b/telemin/templates/account/profile.html
@@ -273,7 +273,8 @@
                             <p>I'm thrilled to share that I've completed a graduate certificate course in project
                                 management with the president's honor roll.</p>
                             <!-- Card img -->
-                            <img class="card-img" src="assets/images/post/3by2/01.jpg" alt="Post">
+                            <img class="card-img" src="https://social.webestica.com/assets/images/post/3by2/01.jpg"
+                                 alt="Post">
                             <!-- Feed react START -->
                             <ul class="nav nav-stack py-3 small">
                                 <li class="nav-item">
@@ -309,20 +310,6 @@
                                 <!-- Card share action END -->
                             </ul>
                             <!-- Feed react END -->
-
-                            <!-- Add comment -->
-                            <div class="d-flex mb-3">
-                                <!-- Avatar -->
-                                <div class="avatar avatar-xs me-2">
-                                    <a href="#!"> <img class="avatar-img rounded-circle"
-                                                       src="assets/images/avatar/12.jpg" alt=""> </a>
-                                </div>
-                                <!-- Comment box  -->
-                                <form class="w-100">
-                                    <textarea data-autoresize="" class="form-control pe-4 bg-light" rows="1"
-                                              placeholder="Add a comment..."></textarea>
-                                </form>
-                            </div>
                         </div>
                         <!-- Card body END -->
                     </div>
