--- a/telemin/static/css/base.css
+++ b/telemin/static/css/base.css
@@ -25,3 +25,7 @@ body {
     color: rgba(0, 32, 51, 0.8);
     background-color: rgba(92, 121, 177, 0.22);
 }
+
+.card {
+    border-radius: 8px;
+}
